--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,11 @@
     pointer-events: none;
   }
   
-  @media (prefers-reduced-motion: no-preference) {
+  /* @media (prefers-reduced-motion: no-preference) {
     .App-logo {
       animation: App-logo-spin infinite 20s linear;
     }
-  }
+  } */
   
   .App-header {
     background-color: #282c34;
@@ -23,17 +23,44 @@
     font-size: calc(10px + 2vmin);
     color: white;
   }
+
+  .heading2 {
+    background-color: #282c34;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
+  }
   
   .App-link {
     color: #61dafb;
   }
+
   
-  @keyframes App-logo-spin {
+  
+  /* @keyframes App-logo-spin {
     from {
       transform: rotate(0deg);
     }
     to {
       transform: rotate(360deg);
     }
+  } */
+
+  /* table {
+    border: 2px solid forestgreen;
+    width: 600px;
+    height: 50px;
   }
+    
+  th {
+    text-align: center;
+    border-bottom: 1px solid black;
+  }
+    
+  td {
+    text-align: center;
+  } */
   
